# personal-review-agent

./: .gitignore  AGENTS.md  README.md  agentmain.py  ga.py  hub.pyw  launch.pyw  pyproject.toml
assets/: configure_mykey.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  tools_schema.json  tools_schema_cn.json
frontends/: desktop_bridge.py  obsidian_review_cmd.py  slash_cmds.py  tui_v3.py  tuiapp_v2.py
frontends/desktop/static/: app.js  ga-web.js  index.html  styles.css
ga_cli/: __init__.py  cli.py
memory/: obsidian_memory_management_sop.md  obsidian_periodic_review_sop.md  obsidian_profile_init_sop.md  obsidian_review_sop.md
memory/obsidian_memory_templates/: l1_context.md  l4_records.md  mainline_profile.md  mainline_sop.md  mainlines_registry.json  user_profile.confirmed.json
memory/obsidian_review/: config.example.json  obsidian_review.py
