# AI install hint: choose deps by OS/env + needed ui/bot. do NOT install all.
# minimal core first; missing packages can be installed on demand.

[project]
name = "genericagent"
version = "0.1.0"
description = "Personal Obsidian review agent based on GenericAgent"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "bottle>=0.12",
    "simple-websocket-server>=0.4",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# select extras, not all. match current task/env.
# examples: .[ui] for GUI, bot deps only if bot needed.
ui = [
    "prompt_toolkit>=3.0,<4",
    "rich>=13.0",
    "pillow>=9.0",
]
all-frontends = [
    "pycryptodome>=3.19",
    "qrcode>=7.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["ga_cli"]

[project.scripts]
ga = "ga_cli.cli:main"
